styles/index.css
/* ############ */
/* #region ROOT */
:root {
  font-size: 1rem;
  /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif, font-awesome-solid, nerd-fonts-windows, nerd-fonts; */
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;

  /* varibles */
  --text-primary: #b6b6b6;
  --text-secondary: #ececec;
  --navbar-bg-primary: #23232e;
  --navbar-bg-secondary: #141418;
  --bg-primary: rgb(49, 48, 48);
  --bg-secondary: rgb(26, 26, 26);
  --purple-primary: #6649b8;
  --transition-speed: 600ms;
  --fade-transition-speed: 200ms;

  /* firefox scrollbar styling */
  scrollbar-color: var(--purple-primary) #1e1e24;
  scrollbar-width: thin;
}
/* #endregion */
/* ############ */



/* ############## */
/* #region HEADER */
header {
  background-color: var(--bg-secondary);
  color: var(--text-secondary);

  padding: 1rem;
  margin: 1rem;
  margin-top: 1rem;
  margin-left: 6rem;

  text-align: center;
}
/* #endregion */
/* ############## */



/* ############ */
/* #region BODY */
body {
  background-color: var(--bg-primary);
  color: var(--text-primary);
  padding: 0;
  margin: 0;
}
/* #endregion */
/* ############ */


/* ############ */
/* #region MAIN */
main {
  text-align: center;
  margin-left: 5rem;
  padding: 1rem;
}
main p {
  text-align: left;
  font-size: 2rem;
}
/* #endregion */
/* ############ */



/* ######################### */
/* #region responsive-design */



/* #region small-screens */
@media only screen and (max-width: 599px) {
  /* #region navbar */
  .index-header {
    margin: 1rem;
  }
  .index-main {
    margin: 0;
  }
  /* #endregion */ /* navbar */

  /* #region header */
  :root {
    font-size: 0.8rem;
  }
  /* #endregion */ /* header */
}
/* #endregion */ /* small-screens */


/* #region large-screens */
@media only screen and (min-width: 600px) {

}
/* #endregion */ /* large-screens */



/* #endregion */ /* resposive-design */
/* ######################### */

